--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,8 @@
+* {
+  margin-top: 10px;
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
