--- a/client/src/FormEntry.css
+++ b/client/src/FormEntry.css
@@ -2,3 +2,11 @@
   margin-left: 10px;
   margin-right: 10px;
 }
+
+.button {
+  min-width: 100px;
+}
+
+.button:hover {
+  transform: scale(1.03);
+}
